# VM

./: .gitignore  README.md
FileFormat/: file_format.cpp  file_format.hpp
assembler/: CMakeLists.txt
assembler/inc/: lexer.hpp  parser.hpp  program-builder.hpp  rest.hpp  token-list.hpp
assembler/src/: assembler.cpp  lexer.cpp  parser.cpp
tests/: array_average_1.asm  array_average_2.asm  benchmark.asm  benchmark_object.txt  factorial_recursive.asm  factorial_while.asm  fib.asm  object.asm  object_test.asm
vm/: CMakeLists.txt
vm/inc/: opdefs.hpp  vm.hpp
vm/src/: main.cpp  vm.cpp
